avatar was hiding behind map, styled error page, fixed dates on eventmap, increased size of header on eventmap, added route to howitworks

--- a/client/scss/header.scss
+++ b/client/scss/header.scss
@@ -49,6 +49,10 @@
   margin: .5rem .5rem;
   height: 7rem;
   border-radius: 5rem;
+
+  &.avatar {
+    z-index: 1;
+  }
 }
 
 .header-links-left-signedout {
