--- a/client/scss/type.scss
+++ b/client/scss/type.scss
@@ -6,20 +6,21 @@
 
 // @import url("fonts.googleapis.com/css?family=Bellefair");
 
-// html,
-// body {
-//   font-family: Georgia, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-//   font-size: 16px;
-// }
+html,
+body {
+  font-family: Roboto, Georgia, -apple-system, BlinkMacSystemFont, Helvetica Neue, sans-serif;
+}
 
-// h1,
-// h2,
-// h3,
-// h4,
-// h5 {
-//   // font-family: 'Bellefair', cursive;
-// }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  // font-family: 'Bellefair', cursive;
+}
 
-// p {}
+p {}
 
-// a {}
+a {
+  text-decoration: none;
+}
